# the_bot

./: .env_example  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cr.yml  flake8.yml  release.yml
app/: heandlers.py  message.py  questions_state.py
app/database/: answer.py  database.py  tables.py
src/: chat.js
