[tool.poetry]
name = "the-bot"
version = "0.1.0"
description = ""
authors = ["Katrin Torsunova <katrin.tep@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
