[tool.poetry]
name = "the-bot"
version = "0.1.0"
description = ""
authors = ["Katrin Torsunova <katrin.tep@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.7.0"
python-dotenv = "1.0.1"
SQLAlchemy = "2.0.30"
psycopg2 = "2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
